# simpleconf

./: ChangeLog  README.md  example.py  setup.cfg  setup.py
.pytest_cache/v/cache/: nodeids
simpleconf/: __init__.py  exceptions.py  option.py  section.py  validators.py
simpleconf/dialogs/: wx.py
simpleconf2/: __init__.py  exceptions.py  filename.py  option.py  section.py  validators.py
simpleconf2/dialogs/: wx.py
tests/: __init__.py  exception_test.py  filename_test.py  option_test.py  section_test.py  validation_test.py
