[tool:pytest]
testpaths = "tests"
addopts = "-xq"

[metadata]
name = simpleconf
author = Chris Norman
author-email = chris.norman2@googlemail.com
summary = (Hopefully) the last configuration manager I will ever write.
description-file = README.md
home-page = https://github.com/chrisnorman7/simpleconf
license = MPL-2
